[gd_scene load_steps=6 format=3 uid="uid://8nuh30yoi6iy"]

[ext_resource type="Script" path="res://pause.gd" id="1_ygueh"]
[ext_resource type="PackedScene" uid="uid://x6t6sir7oudu" path="res://salvar.tscn" id="2_rvyx7"]
[ext_resource type="PackedScene" uid="uid://c64ivekyjuoch" path="res://carregar.tscn" id="3_dehms"]
[ext_resource type="PackedScene" uid="uid://pge3t88cphpg" path="res://help.tscn" id="4_pmuxx"]

[sub_resource type="Theme" id="Theme_4d1wc"]
Button/font_sizes/font_size = 32

[node name="Pause" type="CanvasLayer"]
visible = false
script = ExtResource("1_ygueh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0705882, 0.0627451, 0.776471)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -26.5
offset_right = 56.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = SubResource("Theme_4d1wc")
theme_override_constants/separation = 25

[node name="Return" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Voltar"

[node name="Ajuda" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Ajuda"

[node name="Sair" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Sair"

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Volume"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.6

[node name="Salvar" type="Button" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
text = "Salvar"

[node name="Carregar" type="Button" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
text = "Carregar"

[node name="Salvar" parent="." instance=ExtResource("2_rvyx7")]
layer = 128
visible = false

[node name="Voltar" type="Button" parent="Salvar"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 67.0
grow_vertical = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Voltar"

[node name="Carregar" parent="." instance=ExtResource("3_dehms")]
layer = 128
visible = false

[node name="Voltar2" type="Button" parent="Carregar"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 67.0
grow_vertical = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Voltar"

[node name="Help" parent="." instance=ExtResource("4_pmuxx")]
layer = 128

[node name="Voltar2" type="Button" parent="Help"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 67.0
grow_vertical = 0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Voltar"

[connection signal="pressed" from="Control/VBoxContainer/Return" to="." method="voltar"]
[connection signal="pressed" from="Control/VBoxContainer/Ajuda" to="." method="_on_ajuda_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Sair" to="." method="sair"]
[connection signal="value_changed" from="Control/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Control/VBoxContainer/Salvar" to="." method="salvar"]
[connection signal="pressed" from="Control/VBoxContainer/Carregar" to="." method="carregar"]
[connection signal="pressed" from="Salvar/Voltar" to="." method="voltarPause"]
[connection signal="pressed" from="Carregar/Voltar2" to="." method="voltarPause"]
[connection signal="pressed" from="Help/Voltar2" to="." method="voltarPause"]
